--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer components {
+  .bg-layout {
+    @apply flex min-h-screen flex-col before:absolute before:h-full before:w-full before:opacity-50 before:bg-center before:bg-no-repeat before:blur-[105px] before:content-[''];
+  }
+}
